--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/storage/emulated/0/portfolio/image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Aishwarya S</h1>
             <p>Department of Computer science with Datascience</p>
         </div>
@@ -146,7 +146,8 @@ I'm skilled in Python and popular data science tools. My interests in data visua
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Digital portfolio</a></li>
+                <li><a href="#">Digital portfolio</a></li>
+
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -157,7 +158,7 @@ I'm skilled in Python and popular data science tools. My interests in data visua
         <div class="section-content"0>
             <center>
             <h2>Resume</h2>
-            <a href="/storage/emulated/0/portfolio/resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
